2010-05-17  MORITA Hajime  <morrita@google.com>

        Reviewed by Kent Tamura.

        [Chromium] Windows: Speed of indeterminate progress bar should be constant
        https://bugs.webkit.org/show_bug.cgi?id=39211

        No new tests, animation effect can be confirmed only manually.

        * rendering/RenderThemeChromiumWin.cpp:
        (WebCore::RenderThemeChromiumWin::animationDurationForProgressBar):
        (WebCore::RenderThemeChromiumWin::paintProgressBar):

2010-05-17  Drew Wilson  <atwilson@chromium.org>

        Unreviewed build fix for Qt and Chromium.

        https://bugs.webkit.org/show_bug.cgi?id=39147

        * page/Frame.h: Now includes CSSMutableStyleDeclaration.h.

2010-05-17  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Darin Adler.

        Remove unused member member from Document
        https://bugs.webkit.org/show_bug.cgi?id=39251

        Remove m_associatedHistoryItems from Document; it is never used.

        * dom/Document.h:

2010-05-17  Darin Adler  <darin@apple.com>

        Fix Qt build.

        * page/Frame.cpp:
        (WebCore::Frame::setTypingStyle): Move back to make non-inline.
        * page/Frame.h: Removed inline version of setTypingStyle.

2010-05-14  Darin Adler  <darin@apple.com>

        Reviewed by Brady Eidson.

        Frame has many trivial member functions that should be inlined
        https://bugs.webkit.org/show_bug.cgi?id=39147

        * WebCore.base.exp: Export the functions that are now inlined.

        * page/Frame.cpp:
        (WebCore::Frame::removeEditingStyleFromBodyElement):
        Removed the body of this function.

        * page/Frame.h:
        (WebCore::Frame::init): Moved here from .cpp.
        (WebCore::Frame::loader): Ditto.
        (WebCore::Frame::redirectScheduler): Ditto.
        (WebCore::Frame::view): Ditto.
        (WebCore::Frame::script): Ditto.
        (WebCore::Frame::document): Ditto.
        (WebCore::Frame::selection): Ditto.